--- a/CSS/navigate.css
+++ b/CSS/navigate.css
@@ -40,6 +40,9 @@ div:hover .pooo1 {
     opacity:0.8;
     position: absolute;
 }
+.imge:hover{
+    opacity: 1;
+}
 .highlight2{
     display: block;
     margin-top: 270px;
@@ -81,4 +84,8 @@ a.highlight2:active{
     margin-left: 325px;
     height: 40px;
     width: 80px;
+}
+.hello::first-letter {
+    color: blueviolet;
+    font-size: xx-large;
 }
