--- a/Training/AssignmentsByRameshSir/Css/stylesheet.css
+++ b/Training/AssignmentsByRameshSir/Css/stylesheet.css
@@ -39,6 +39,15 @@
     color: white;
     padding-left: 19vw;
 }
+/* .arrow {
+    border: solid whitesmoke;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+}
+.down {
+    transform: rotate(45deg);
+} */
 ul{
     display: flex;
     list-style-type: none;
@@ -143,6 +152,13 @@ li a{
     background-color: #F7F7F7;
     height: 30vh;
 }
+/* .m1{
+    margin: auto;
+    width:80px;
+    rotate: 150deg;
+    height: 80px;
+    background-color: #524545;
+} */
 .row2{
     width: 76%;
     display: flex;
@@ -161,6 +177,22 @@ li a{
 .box1 h4,.box2 h4,.box3 h4,.box4 h4{
     font-size: 1.5rem;
 }
+/* .box1 .m1{
+    width: 80px;
+    height: 80px;
+    background-color:white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    rotate: 45deg;
+    text-decoration: none;
+    margin-left: 30%;
+}
+.m1:hover{
+    background-color: rgb(95, 95, 65);
+    rotate: -90deg;
+    transition: 0.9s;
+} */
 .form-section{
     padding-top: 90px;
     width: 100%;
