--- a/Training/Responsive/CSS/style.css
+++ b/Training/Responsive/CSS/style.css
@@ -93,6 +93,9 @@ nav ul li a:hover{
         float: left;
         width: 33.33%;
     }
+    nav ul li a{
+        border: none;
+    }
     .products{
         clear: both;
         display: flex;
@@ -102,6 +105,7 @@ nav ul li a:hover{
     .product-box{
         width: 49%;
         margin: auto;
+        margin-top: 10px;
         border: none;
     }
     
@@ -116,6 +120,7 @@ nav ul li a:hover{
     .product-box{
         width: 22%;
         margin: auto;
+        margin-top: 10px;
     }
 }
 
