--- a/Training/ActualTraining/AssignmentsByTeam/Assignment1/CSS/style.css
+++ b/Training/ActualTraining/AssignmentsByTeam/Assignment1/CSS/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family:'Roboto', sans-serif;
 }
 .bg1{
     position: relative;
@@ -35,7 +37,7 @@
     width: 100%;
 }
 .header-content .work-hard p{
-    color: rgb(216, 149, 149);
+    color: rgb(96, 79, 79);
     font-size: 20px;
     padding: 27% 0% 0% 16%;
 }
@@ -146,19 +148,23 @@
 }
 .unique-digit{
     padding:1em 1.5em 1em;
-    color: rgb(142, 145, 134);
+    /* color: rgb(142, 145, 134); */
+   color:#b5495d;
 }
 .young h3{
     padding: 0em 1.4em 0.5em;
 }
 .lorem{
     padding: 0.5em 1.5em 0.5em 1.5em;
+    color: #3b3535;
+    font-style: italic;
 }
 .a-tag{
     padding-top:1em;
 }
 .a-tag a{
-    color: rgb(142, 145, 134);
+    /* color: rgb(142, 145, 134); */
+    color:#b5495d;
     text-decoration: none;
 }
 .find-more{
@@ -303,6 +309,13 @@ li{
 .contact-us p{
     padding: 2% 0px;
 }
+.contact-us a{
+    text-decoration: none;
+    color:whitesmoke;
+}
+.contact-us a:hover{
+    color: yellowgreen;
+}
 .maps{
     width: 50%;
     padding: 5% 0% 5% 10%;
@@ -325,6 +338,9 @@ footer{
 }
 
 @media (min-width:1400px){
+    .easy-way{
+        margin-top: 16%;
+    }
     .awesome-skilled{
         width: 100%;
         height: 99vh;
@@ -352,7 +368,10 @@ footer{
         padding-top: 2em;
     }
     .best-responsibility{
-        padding: 7% 10%;
+        padding: 3% 10%;
+    }
+    .we-value h1{
+        width: 65%;
     }
     .contact-us{
         padding: 10% 10% 10% 13%;
