--- a/Training/ActualTraining/AssignmentsByTeam/Assignment1/CSS/style.css
+++ b/Training/ActualTraining/AssignmentsByTeam/Assignment1/CSS/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 .bg1{
     position: relative;
@@ -87,7 +87,6 @@
 .easy-way{
     margin-top: 20%;
     display: flex;
-    /* background-color: #F0F0F0; */
 }
 .img1{
     width: 50%;
@@ -125,6 +124,9 @@
 .creative h4,.clean h4{
     padding: 2% 0px;
 }
+.creative p,.clean p{
+    font-style: italic;
+}
 .unique{
     width: 100%;
     display: flex;
@@ -148,7 +150,6 @@
 }
 .unique-digit{
     padding:1em 1.5em 1em;
-    /* color: rgb(142, 145, 134); */
    color:#b5495d;
 }
 .young h3{
@@ -163,7 +164,6 @@
     padding-top:1em;
 }
 .a-tag a{
-    /* color: rgb(142, 145, 134); */
     color:#b5495d;
     text-decoration: none;
 }
@@ -225,7 +225,6 @@ li{
     background-color:rgb(212,212,210);
     position: relative;
     width: 100%;
-    /* height: 680px; */
     height: 42.6em;
 }
 .awesome-designers{
