--- a/Training/ActualTraining/AssignmentsByTeam/Assignment1/CSS/style.css
+++ b/Training/ActualTraining/AssignmentsByTeam/Assignment1/CSS/style.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap'); */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    src: url('../Roboto/Roboto-Italic.ttf');
     font-family: 'Roboto', sans-serif;
 }
 .bg1{
@@ -59,8 +60,8 @@
 }
 .col{
     width: 22%;
-    height: 350px;
-    border: 1px solid rgb(248, 216, 216);
+    height: 340px;
+    border: 1px solid rgb(240, 240, 240);
     text-align: center;
     background-color: white;
 }
@@ -68,16 +69,15 @@
     height: 70px;
     width: 70px;
     border-radius: 50px;
-    background-color: rgb(213, 78, 78);
+    background-color: crimson;
     padding: 25px;
     margin: 10% 0% 10% 36%;
 }
 .pixel{
-    text-align: center;
     width: 100%;
 }
 .pixel h3{
-    padding: 15px;
+    padding: 15px 0px 25px 0px;
 }
 .pixel p{
     width: 75%;
@@ -93,39 +93,63 @@
 }
 .img1 img{
     width: 100%;
+    height: 35em;
 }
 .easy-ways{
     width: 50%;
     background-color: #F0F0F0;
 }
 .smart{
-    height: 70%;
-    padding:4% 10%;
+    height: 45%;
+    padding:3% 3% 1% 5%;
+    width: 85%;
+    margin: 8% 0% 0% 8%;
+    background-color: whitesmoke;
 }
 .easy p{
     padding-bottom:15px;
-    color: rgb(142, 145, 134);
+    color: crimson;
+    font-size: 19px;
 }
 .easy h3{
     padding: 10px 0px;
+    font-size: 22px;
 }
-.lelit{
+.para{
     padding: 25px 0px;
     width:90%;
+    font-size: 17px;
+    color: grey;
 }
 .creative-clean{
     width: 100%;
     display: flex;
+    height: 28%;
+    padding: 2% 0% 0% 5%;
+    /* justify-content: space-between; */
 }
-.creative,.clean{
-    padding: 1% 0% 0% 10%;
-    width: 100%;
+.creative{
+    width: 42%;
+    background-color: whitesmoke;
+    padding: 5%;
+    margin: 5% 3% 2% 3%;
+    height: fit-content;
+}
+.clean{
+    width: 42%;
+    background-color: whitesmoke;
+    padding: 5%;
+    margin: 5% 3% 2% 3%;
+    height: fit-content;
 }
 .creative h4,.clean h4{
     padding: 2% 0px;
+    font-size: 19px;
 }
 .creative p,.clean p{
+    padding: 2% 0px;
     font-style: italic;
+    color: grey;
 }
 .unique{
     width: 100%;
@@ -149,8 +173,9 @@
     height: auto;
 }
 .unique-digit{
-    padding:0.5em 1.5em 0.5em 1.5em;
-   color:#b5495d;
+    padding:1em 1.5em 0.2em 1.5em;
+   color:crimson;
+   font-weight: 600;
 }
 .young h3{
     padding: 0em 1.4em 0.5em;
@@ -164,7 +189,8 @@
     padding-top:1em;
 }
 .a-tag a{
-    color:#b5495d;
+    font-weight: 600;
+    color:crimson;
     text-decoration: none;
 }
 .find-more{
@@ -173,10 +199,12 @@
     padding:3% 5%;
 }
 .find-more p{
-    color: rgb(142, 145, 134);
+    color: crimson;
+    font-weight: 600;
 }
 .find-more h3{
     padding-top: 2%;
+    font-size: 22px;
 }
 .img-section{
     width: 80%;
@@ -205,14 +233,21 @@
 }
 .values p{
     padding-top:4em;
-    color: rgb(142, 145, 134);
+    color: crimson;
+    font-weight: bold;
+    font-size: 18px;
 }
 .values h3{
     padding-bottom: 4%;
+    font-size: 24px;
 }
 li{
     margin-left: 3%;
     padding: 0.3em;
+    font-style: italic;
+    color: silver;
+    font-weight: 600;
+    font-size: 17px;
 }
 .new-product-img{
     width: 50%;
@@ -236,10 +271,14 @@ li{
 }
 .design-brand P{
     padding:2% 0%;
-    color: rgb(142, 145, 134);
+    color: crimson;
+    font-weight: bold;
+    font-size: 18px;
 }
 .design-brand h3{
     width:10em;
+    font-weight: 700;
+    font-size: 22px;
 }
 .awesome-img img{
     position: absolute;
@@ -259,6 +298,12 @@ li{
 }
 .best-quality h4{
     padding-bottom: 5%;
+    font-weight: 700;
+    font-size: 18px;
+}
+.best-quality p{
+    font-style: italic;
+    color: rgb(104, 104, 104);
 }
 .responsibility{
     padding-left: 5%;
@@ -271,23 +316,27 @@ li{
     align-items: center;
     justify-content: center;
 }
+.our-products img{
+    width:100%;
+    height:600px;
+}
 .our-products-content{
     position: absolute;
     color: white;
     border: 1px solid rgb(164, 150, 150);
     text-align: center;
     padding: 3%;
-    width: 45%;
-    height: 30%;
+    width: 70%;
+    height: 60%;
 }
 .we-value p{
     padding: 5%;
-    font-size: 18px;
+    font-size: 21px;
     font-weight: bold;
-    color: rgb(142, 145, 134);
+    color: crimson;
 }
 .we-value h1{
-    font-size: 28px;
+    font-size: 45px;
     width: 75%;
     display: inline-block;
     padding: 5px;
@@ -308,10 +357,12 @@ li{
 }
 .contact-us p{
     padding: 2% 0px;
+    color: rgb(196, 196, 196);
+    font-weight: bold;
 }
 .contact-us a{
     text-decoration: none;
-    color:whitesmoke;
+    color:crimson;
 }
 .contact-us a:hover{
     color: yellowgreen;
@@ -348,14 +399,26 @@ footer{
     .icon{
         margin: 10% 0% 10% 40%;
     }
-    .lelit p{
+    .col{
+        height: 370px;
+    }
+    .para p{
         width: 75%;
+    }
+    .img1 img{
+        height: 75vh;
+    }
+    .creative-clean{
+        margin-top: 1%;
     }
     .creative p,.clean p{
         width: 80%;
     }
     .unique-digit{
         padding: 10% 0px 3% 5%;
+    }
+    .young{
+        height: 98.8%;
     }
     .young h3{
         width: 60%;
@@ -369,6 +432,9 @@ footer{
     }
     .best-responsibility{
         padding: 3% 10%;
+    }
+    .our-products img{
+        height: 750px;
     }
     .we-value h1{
         width: 65%;
