--- a/Training/ActualTraining/AssignmentsByTeam/Assignment1/CSS/mobile.css
+++ b/Training/ActualTraining/AssignmentsByTeam/Assignment1/CSS/mobile.css
@@ -43,9 +43,9 @@
     .new-product-img{
         margin-left: -5%;
     }
-    .awesome-img{
+    .awesome-img img{
         position: absolute;
-        top: 72%;
+        top: 70%;
     }
     .our-products{
         margin-top: 55%;
