--- a/Training/ActualTraining/AssignmentsByTeam/Assignment1/CSS/style.css
+++ b/Training/ActualTraining/AssignmentsByTeam/Assignment1/CSS/style.css
@@ -96,7 +96,7 @@
 }
 .img1 img{
     width: 100%;
-    height: 35em;
+    height: 38em;
 }
 .easy-ways{
     width: 50%;
@@ -264,7 +264,7 @@ li{
     background-color:rgb(212,212,210);
     position: relative;
     width: 100%;
-    height: 42.6em;
+    height: 46em;
 }
 .awesome-designers{
     width: 100%;
@@ -274,7 +274,7 @@ li{
     width: 100%;
 }
 .design-brand P{
-    padding:2% 0%;
+    padding:1% 0%;
     color: crimson;
     font-weight: bold;
     font-size: 18px;
@@ -288,6 +288,7 @@ li{
     position: absolute;
     top: 0;
     right: 0;
+    height: 100%;
 }
 .best-responsibility{
     padding: 2% 5% 2% 10%;
@@ -398,7 +399,7 @@ footer{
     }
     .awesome-skilled{
         width: 100%;
-        height: 99vh;
+        height: 85vh;
     }
     .icon{
         margin: 10% 0% 10% 40%;
