--- a/Training/ActualTraining/AssignmentsByTeam/Assignment1/CSS/mobile.css
+++ b/Training/ActualTraining/AssignmentsByTeam/Assignment1/CSS/mobile.css
@@ -25,6 +25,9 @@
     .col{
         margin-top: 10%;
     }
+    .clean{
+        height:14.6em;
+    }
     .icon{
         margin-left: 42%;
     }
